kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestures-ui
  labels:
    app: gestures-ui
spec:
  type: LoadBalancer
  selector:
    app: gestures-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
